k8s/auth-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: onride
  labels:
    app: auth-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      enableServiceLinks: false
      containers:
        - name: auth-service
          image: docker.io/allstar98k/onride-auth-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8081
          resources:
            requests:
              memory: "384Mi"
              cpu: "150m"
            limits:
              memory: "512Mi"
              cpu: "400m"

---

apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: onride
spec:
  selector:
    app: auth-service
  ports:
    - port: 8081
      targetPort: 8081
