k8s/kafka.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: onride
spec:
  serviceName: kafka
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: confluentinc/cp-kafka:8.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 29092
            - containerPort: 29093
          volumeMounts:
            - name: data
              mountPath: /var/lib/kafka/data
          resources:
            requests:
              memory: "512Mi"
              cpu: "250m"
            limits:
              memory: "1Gi"
              cpu: "500m"
      volumes:
        - name: data
          emptyDir: {}


---

apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: onride
spec:
  clusterIP: None
  selector:
    app: kafka
  ports:
    - name: plaintext
      port: 29092
    - name: controller
      port: 29093
