k8s/matching-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matching-service
  namespace: onride
  labels:
    app: matching-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: matching-service
  template:
    metadata:
      labels:
        app: matching-service
    spec:
      enableServiceLinks: false
      containers:
        - name: matching-service
          image: docker.io/allstar98k/onride-matching-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8084
            - containerPort: 9096
          resources:
            requests:
              memory: "384Mi"
              cpu: "150m"
            limits:
              memory: "512Mi"
              cpu: "400m"

---

apiVersion: v1
kind: Service
metadata:
  name: matching-service
  namespace: onride
spec:
  selector:
    app: matching-service
  ports:
    - name: http
      port: 8084
      targetPort: 8084
    - name: grpc
      port: 9096
      targetPort: 9096
