k8s/ride-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ride-service
  namespace: onride
  labels:
    app: ride-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ride-service
  template:
    metadata:
      labels:
        app: ride-service
    spec:
      enableServiceLinks: false
      containers:
        - name: ride-service
          image: docker.io/allstar98k/onride-ride-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8083
          resources:
            requests:
              memory: "384Mi"
              cpu: "150m"
            limits:
              memory: "512Mi"
              cpu: "400m"

---

apiVersion: v1
kind: Service
metadata:
  name: ride-service
  namespace: onride
spec:
  selector:
    app: ride-service
  ports:
    - port: 8083
      targetPort: 8083
