k8s/schema-registry.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: schema-registry
  namespace: onride
  labels:
    app: schema-registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: schema-registry
  template:
    metadata:
      name: schema-registry
      labels:
        app: schema-registry
    spec:
      enableServiceLinks: false
      containers:
        - name: schema-registry
          image: confluentinc/cp-schema-registry:8.2.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8085
          resources:
            requests:
              memory: "384Mi"
              cpu: "150m"
            limits:
              memory: "512Mi"
              cpu: "300m"

---

apiVersion: v1
kind: Service
metadata:
  name: schema-registry
  namespace: onride
spec:
  selector:
    app: schema-registry
  ports:
    - port: 8085
      targetPort: 8085
